<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="Usuario">
        <EditTextPreference
            app:key="editar_usuario"
            app:title="Usuario"
            app:summary="Nombre de usuario"
            app:dialogTitle="Nombre de usuario">
        </EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory app:title="Información">
        <Preference
            app:key="version"
            app:title="Info. de la aplicación"
            app:summary="Versión Beta"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">
        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />
        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />
    </PreferenceCategory>
</PreferenceScreen>