<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    tools:context=".SobreNosotrosFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            android:background="@drawable/about_us"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Sobre nosotros"
            android:id="@+id/collapsing_toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/frase_sobrenosotros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frase_final"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parrafo"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/punto_uno"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/punto_dos"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/punto_tres"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/punto_cuatro"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/punto_cinco"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/punto_seis"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parrafo_dos"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>