<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    android:id="@+id/layout_add_comunicacion"
    tools:context=".NuevaComunicacion">

    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/mensaje" />

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/text_input_anadir"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:counterEnabled="true"
       app:counterMaxLength="255"
       app:errorEnabled="true"
       android:layout_marginHorizontal="20dp"
       android:layout_marginTop="20dp">
       <com.google.android.material.textfield.TextInputEditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/tf_add_comunicacion"
           android:inputType="textMultiLine"
           android:scrollbars="vertical"
           android:maxLines="4">

       </com.google.android.material.textfield.TextInputEditText>

   </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_empleado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:errorEnabled="true"
        android:layout_marginHorizontal="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tf_nombre_empleado"
            android:inputType="textMultiLine">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tf_comunicacion_anonima"
        android:layout_marginHorizontal="20dp"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_anonimo"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/switch_anonimo"
        android:checked="false"/>
    <Spinner
        android:id="@+id/spinner_tipo_comunucacion"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:entries="@array/tipo_comunicacion" />
    <Spinner
        android:id="@+id/spinner_departamento"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:entries="@array/departamentos" />
    <Button
        android:id="@+id/btnAnadirComunicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/custom_button"
        android:onClick="aceptar"
        android:text="@string/btn_enviar"
        android:textColor="#000000"
        app:backgroundTint="#fff" />

    <Button
        android:id="@+id/btnCancelarComunicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:onClick="cancelar"
        android:text="@string/btn_cancelar"
        android:textColor="#000000"
        app:backgroundTint="#fff" />


</LinearLayout>