<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/login" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="90dp"
        android:text="@string/prompt_email"
        android:textColor="#485549"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:inputType="textAutoComplete"
        android:drawableLeft="@drawable/ic_action_user"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/prompt_password"
        android:textColor="#485549"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="70dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_action_password"/>

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/custom_button"
        android:onClick="Iniciar"
        android:text="@string/btn_iniciar_sesion"
        android:textColor="#000000"
        app:backgroundTint="#fff" />

    <TextView
        android:id="@+id/tfLostPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/tf_olvidaste_contrasena"
        android:textColor="#fff"
        android:textSize="17sp" />


</LinearLayout>